[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Props/meteor.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 18.1154

[sub_resource type="CanvasItemMaterial" id=2]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0.237183, 0, 0.453125, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.664774, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, -32, 0 )
initial_velocity = 32.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 180.0
angle_random = 0.0
scale = 0.6
scale_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color" ]

[node name="Bullet" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Particles2D" type="Particles2D" parent="." index="2"]

material = SubResource( 2 )
emitting = true
amount = 32
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Material", "Process Material", "Textures", "Time", "Transform" ]

[node name="LifeTime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]


